_sass/styles.scss
// More info on background image on viewport: https://www.freecodecamp.org/news/css-full-page-background-image-tutorial/
$backgroundSemiTransparentColor: rgba(black, 0.85);
body {
  background-image: linear-gradient(
      $backgroundSemiTransparentColor,
      $backgroundSemiTransparentColor
    ),
    url("/assets/background-image-3.jpg");
  background-repeat: no-repeat;
  background-position: center center;
  background-attachment: fixed;
  background-size: cover;
}

:root {
  --scrollbarSize: 7px;
  --scrollbarBorderRadius: 50px;
}

::-webkit-scrollbar {
  height: var(--scrollbarSize); /* Height of horizontal scrollbar. */
  width: var(--scrollbarSize); /* Width of vertical scrollbar. */
  border: none;
  background: transparent;
}

::-webkit-scrollbar-thumb:horizontal {
  background: darken($brand-color, 10%);
  border-radius: calc(var(--scrollbarBorderRadius));
}

::-webkit-scrollbar-thumb:horizontal:hover {
  background: $brand-color;
}

::-webkit-scrollbar-thumb:vertical {
  background: darken($brand-color, 10%);;
  border-radius: 10px;
}

::-webkit-scrollbar-thumb:vertical:hover {
  background: $brand-color;
}

.site-header {
  border-top: none;
  background-color: rgba(white, 0.09);
}

.plain-text-smaller {
  font-family: "Fira Mono", monospace;
  font-size: 0.9em;
}

pre,
code {
  @include relative-font-size(1);
  font-family: $code-font-family;
  font-weight: $code-font-weight;
  background-color: $syntax-highlight-background-color;
  border: 1px solid $color-gray-dark;
  border-radius: 3px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: $heading-font-family;
}

$modified-background-color-for-headers: lighten($background-color, 5%);
$modified-background-color-for-border: lighten($background-color, 10%);
$modified-background-color-for-search: darken($text-color, 20%);

blockquote {
  font-size: $base-font-size;
  font-style: normal;
  color: darken($text-color, 20%);
  background-color: $modified-background-color-for-border;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

$vertical_space: 14pt;
$border-outline: 1.125pt;

.categories-block {
  padding-top: $vertical_space;
  padding-bottom: $vertical_space * 2.3;
}

$category-chip-padding-left-right: 6pt;
$category-chip-padding-top-bottom: 3pt;
$category-chip-rounded-border-radius: 6pt;
$category-chip-margin-right: 6pt;

.category {
  border: $border-outline solid $modified-background-color-for-border;
  //background-color: $color-light-gray;
  border-radius: $category-chip-rounded-border-radius;
  padding: $category-chip-padding-top-bottom $category-chip-padding-left-right;
  margin-right: $category-chip-margin-right;
}

$related-post-border: 4pt;

.related-post-block {
  border: $border-outline dashed $modified-background-color-for-border;
  background-color: $modified-background-color-for-headers;
  padding-left: $related-post-border * 2;
  padding-right: $related-post-border * 2;
  padding-top: $related-post-border;
  padding-bottom: $related-post-border;
}

.social-media-container {
  display: flex;
  flex-direction: row;
  margin-top: 8pt;
  justify-content: flex-start;
  height: 25pt;
}

.social-media-item {
  align-self: center;
  margin: 3pt;
}

.post-hero-image {
  padding-bottom: 24px;
  -webkit-animation: fadein 1s;
  animation: fadein 1s;
}

@keyframes fadein {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.footer-col-half {
  width: -webkit-calc(50% - (#{$spacing-unit} / 2));
  width: calc(50% - (#{$spacing-unit} / 2));
}

@include media-query($on-laptop) {
  .footer-col-half {
    width: -webkit-calc(100% - (#{$spacing-unit} / 2));
    width: calc(100% - (#{$spacing-unit} / 2));
  }
}

// In the header, when a category is selected, this is applied
.category-selected {
  border-bottom: 3px solid $brand-color;
}

$search-post-border: 4pt;

.search-block {
  border: $border-outline dashed $modified-background-color-for-border;
  background-color: rgba($modified-background-color-for-headers, 0.5);
  padding-left: $search-post-border * 2;
  padding-right: $search-post-border * 2;
  padding-top: $search-post-border;
  padding-bottom: $search-post-border;
  margin-bottom: $search-post-border * 5;
}

.search-input-text {
  width: 100%;
  padding: $search-post-border * 2 $search-post-border * 2;
  margin: $search-post-border * 2 0;
  box-sizing: border-box;
  font-family: $base-font-family;
  font-size: $base-font-size;
  background: $modified-background-color-for-search;
  border: none;
}

::placeholder {
  color: $background-color;
}

.result-block {
  margin: 0;
  list-style: none;
}

.result-item {
  margin: $search-post-border * 0.7;
}

.avatar-container {
  display: flex;
  flex-direction: row;
  margin: 4pt;
}

.avatar-icon {
  flex-basis: 52pt;
  margin: 4pt;
  flex-shrink: 0;
}

.avatar-text {
  flex-grow: 1;
  margin: 4pt;
}

.caption {
  text-align: center;
  font-size: 0.8em;
}

.big-quote {
  text-align: center;
  font-size: 1.2em;
  font-weight: bold;
  padding-top: 12pt;
  padding-bottom: 12pt;
}

// More info: https://css-tricks.com/NetMag/FluidWidthVideo/Article-FluidWidthVideo.php
.videoWrapper {
  position: relative;
  padding-bottom: 56.25%; /* 16:9 */
  padding-top: 25px;
  height: 0;
}

.videoWrapper iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

